syntax = "proto3";
package mono.onepassword;
option go_package = "go.f110.dev/mono/go/pkg/cmd/onepassword";

import "google/protobuf/timestamp.proto";

service OnePassword {
    rpc Unlock(RequestUnlock) returns (ResponseUnlock);
    rpc Lock(RequestLock) returns (ResponseLock);
    rpc UseVault(RequestUseVault) returns (ResponseUseVault);
    rpc Info(RequestInfo) returns (ResponseInfo);
    rpc List(RequestList) returns (ResponseList);
    rpc Get(RequestGet) returns (ResponseGet);
}

message Item {
    string uuid     = 1;
    string category = 2;
    string title    = 3;
    string url      = 4;
    string password = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message RequestUnlock {
    bytes master_password = 1;
}

message ResponseUnlock {
    bool success = 1;
}

message RequestLock {}

message ResponseLock {}

message RequestUseVault {
    string path = 1;
}

message ResponseUseVault {}

message RequestInfo {}

message ResponseInfo {
    string path   = 1;
    bool   locked = 2;
}

message RequestList {}

message ResponseList {
    repeated Item items = 1;
}

message RequestGet {
    string uuid = 1;
}

message ResponseGet {
    Item item = 1;
}